--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'com.experitest', name: 'appium', version:'4.1.2'
+	testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'io.appium:java-client:6.1.0'
+	compile 'com.experitest:appium-seetest-extension:12.6'
+	compile 'com.experitest:repo:+'
 
 }
 
